Enabled http & websocket for linux, now working!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"request": "launch",
 			"name": "Debug vgdb",
 			"program": "Build/Linux_Linux/PopEngineTestApp",
-			"args": [],
+			"args": ["UnitTest/HttpServer"],
 			"cwd": "${workspaceRoot}",
 			"useAbsoluteFilePaths":true,
 			"preLaunchTask": "Build"
