--- a/PopEngine.Linux/Makefile
+++ b/PopEngine.Linux/Makefile
@@ -1,5 +1,5 @@
-LIBRARY_NAME = PopEngine
-TESTAPP_NAME = PopEngineTestApp
+LIB_NAME = PopEngine
+APP_NAME = PopEngineTestApp
 
 
 # X ?= if X env var isn't set, use this default
@@ -11,18 +11,18 @@ CC = ${compiler}
 archTarget ?= Linux
 BUILD_DIR = ../Build/Linux_$(archTarget)
 
-SRC = ..
-SRC_PATH = $(SRC)/src
-SOY_PATH = $(SRC_PATH)/SoyLib
+PROJECT_PATH = ..
+SRC_PATH = $(PROJECT_PATH)/src
+SOY_PATH = $(PROJECT_PATH)/src/SoyLib
 
-LOCAL_C_INCLUDES = \
+LIB_INCLUDES = \
 -I$(SOY_PATH)/src	\
 -I$(SOY_PATH)/src/magic_enum/include	\
 -I$(SOY_PATH)/src	\
 -I$(SRC_PATH)/Json11	\
 -I/usr/include/webkitgtk-4.0	\
 
-LOCAL_SRC_FILES  = \
+LIB_SRC_FILES  = \
 $(SRC_PATH)/Json11/json11.cpp \
 $(SRC_PATH)/JsCoreBind.cpp \
 $(SRC_PATH)/PopMain.cpp \
@@ -39,7 +39,7 @@ $(SRC_PATH)/TApiWebsocket.cpp \
 
 
 # soy lib files
-LOCAL_SRC_FILES  += \
+LIB_SRC_FILES  += \
 $(SOY_PATH)/src/smallsha1/sha1.cpp \
 $(SOY_PATH)/src/memheap.cpp \
 $(SOY_PATH)/src/SoyApp.cpp \
@@ -68,21 +68,25 @@ $(SOY_PATH)/src/SoyWebSocket.cpp \
 $(SOY_PATH)/src/SoyWindow.cpp \
 
 
-TESTAPP_SRC_FILES =	\
-$(SRC)/Source_App/PopEngineUnitTestMain.cpp	\
+APP_SRC_FILES =	\
+$(PROJECT_PATH)/Source_App/PopEngineUnitTestMain.cpp	\
+
+LIB_DEFINES = \
+-DTARGET_LINUX	\
+-DJSAPI_JSCORE	\
 
 # -g stops symbol stripping
 # -f[lag] PIC position independent code (for dyanmically loaded code)
 # -rpath $ORIGIN makes the shared object runtimepath be same place as executable
-CFLAGS = -c -DTARGET_LINUX -DJSAPI_JSCORE  $(LOCAL_C_INCLUDES) -std=gnu++17 -fPIC -g
+CFLAGS = -c $(LIB_DEFINES) $(LIB_INCLUDES) -std=gnu++17 -fPIC -g
 LDFLAGS = -pthread
 LDFLAGS += '-Wl,-rpath,$$ORIGIN'
 LDFLAGS += '-Wl,-rpath-link=$(BUILD_DIR)'
 
 LIB_LINK_FLAGS = $(LDFLAGS) -shared
-TEST_APP_LINK_FLAGS = $(LDFLAGS)
+APP_LINK_FLAGS = $(LDFLAGS)
 
-LIBRARY_LINK_LIBS = \
+LIB_LINK_LIBS = \
 -ljavascriptcoregtk-4.0	\
 -L/usr/lib/aarch64-linux-gnu	\
 -lPopH264 \
@@ -91,62 +95,63 @@ LIBRARY_LINK_LIBS = \
 -L$(SRC_PATH)/Libs/PopCameraDevice	\
 
 
-LIB_OBJECTS=$(LOCAL_SRC_FILES:.cpp=.o)
-TESTAPP_OBJECTS=$(TESTAPP_SRC_FILES:.cpp=.o)
+LIB_OBJECTS=$(LIB_SRC_FILES:.cpp=.o)
+APP_OBJECTS=$(APP_SRC_FILES:.cpp=.o)
 
-# ARCHITECTURE=${archTarget}
-# env var MACHTYPE is this systems arch type, eg; aarch64-unknown-linux-gnu
-OUT_LIBRARY=$(BUILD_DIR)/lib${LIBRARY_NAME}.so
-OUT_EXECUTABLE=$(BUILD_DIR)/${TESTAPP_NAME}
+OUT_LIB=$(BUILD_DIR)/lib${LIB_NAME}.so
+OUT_APP=$(BUILD_DIR)/${APP_NAME}
 
-# gr: automate this somehow so its a list of sources, then OUT_ is just their name with no directory structire
+
+# These files (without directory structure) get copied to build dir
 OUT_FILE_SOURCES = \
 $(SRC_PATH)/PopEngine.h	\
 $(SRC_PATH)/Libs/PopH264/libPopH264.so \
 $(SRC_PATH)/Libs/PopCameraDevice/libPopCameraDevice.so \
 
+# convert to Build/xxx target files
 OUT_FILES = $(addprefix ${BUILD_DIR}/,$(notdir ${OUT_FILE_SOURCES}))
-$(info out files...)
-$(info ${OUT_FILES})
+#$(info out files...)
+#$(info ${OUT_FILES})
 
-GithubWorkflow: $(OUT_EXECUTABLE) $(OUT_LIBRARY)
+
+
+GithubWorkflow: $(OUT_APP) $(OUT_LIB)
 	# gr: this prints out the word echo " should it be $(info ::set-output) ?
-	echo "::set-output name=executable:$(OUT_EXECUTABLE)"
-	echo "::set-output name=library:$(OUT_LIBRARY)"
+	echo "::set-output name=executable:$(OUT_APP)"
+	echo "::set-output name=library:$(OUT_LIB)"
 .PHONY: GithubWorkflow
 
-exec: $(OUT_EXECUTABLE)
+exec: $(OUT_APP)
 .PHONY: exec
 
-lib: $(OUT_LIBRARY) 
+lib: $(OUT_LIB) 
 .PHONY: lib
 
 # Copy other output files
 $(OUT_FILES): $(OUT_FILE_SOURCES)
 	mkdir -p $(BUILD_DIR)
 	$(info Copying output files $(OUT_FILES))
-	$(foreach SourceFilename,$(OUT_FILE_SOURCES),'cp $(SourceFilename) ${BUILD_DIR}')
+	$(foreach SourceFilename,$(OUT_FILE_SOURCES),cp $(SourceFilename) ${BUILD_DIR})
 
-$(OUT_EXECUTABLE): $(TESTAPP_OBJECTS) $(OUT_LIBRARY)
-	$(info Building test app $(OUT_EXECUTABLE))
+$(OUT_APP): $(APP_OBJECTS) $(OUT_LIB)
+	$(info Building test app $(OUT_APP))
 	mkdir -p $(BUILD_DIR)
-	$(CC) $(TEST_APP_LINK_FLAGS) $(TESTAPP_OBJECTS) -o $@ -L$(BUILD_DIR) -l$(LIBRARY_NAME)
+	$(CC) $(APP_LINK_FLAGS) $(APP_OBJECTS) -o $@ -L$(BUILD_DIR) -l$(LIB_NAME)
 
-$(OUT_LIBRARY): $(LIB_OBJECTS) $(OUT_HEADER) $(OUT_FILES)
-	$(info Building library $(OUT_LIBRARY))
-	mkdir -p $(BUILD_DIR)
-	$(CC) $(LIB_LINK_FLAGS) -o $@ $(LIB_OBJECTS) $(LIBRARY_LINK_LIBS)
-	# ar rcs $@ $(LIB_OBJECTS)
-	$(info Listing dependencies)
-	ldd $(OUT_LIBRARY)
+$(OUT_LIB): $(LIB_OBJECTS) $(OUT_FILES)
+	$(info Building library $(OUT_LIB))
+	$(CC) $(LIB_LINK_FLAGS) -o $@ $(LIB_OBJECTS) $(LIB_LINK_LIBS)
+	$(info Listing dependencies of $(OUT_LIB))
+	ldd $(OUT_LIB)
 
 .cpp.o:
-	$(CC) $(CFLAGS) $(LOCAL_C_INCLUDES) $(LIBRARY_C_INCLUDES) $< -o $@
+	$(CC) $(CFLAGS) $(APP_INCLUDES) $(LIB_INCLUDES) $< -o $@
 
 clean:
 	# clean build files, anything .o
 	$(info Cleaning files)
-	rm -f $(TESTAPP_OBJECTS)
-	rm -f $(LIB_OBJECTS)	
-	rm -f $(OUT_LIBRARY)
-	rm -f $(OUT_EXECUTABLE)
+	rm -f $(APP_OBJECTS)
+	rm -f $(LIB_OBJECTS)
+	rm -f $(OUT_LIB)
+	rm -f $(OUT_APP)
+
