--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -1,172 +1,172 @@
-name: Create Release
+# name: Create Release
 
-env:
-  project: PopEngine
-  AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
+# env:
+#   project: PopEngine
+#   AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
 
-on:
-  push:
-    branches:
-      - master
-      - '*Test*'
-    #gr: testing, but cannot have path AND branch
-    #paths:
-    #- '**.json'
-    #tsdk: need this otherwise it will never make a package later on    
-    tags:        
-      - v*
-  watch:
-    types: [started]
+# on:
+#   push:
+#     branches:
+#       - master
+#       - '*Test*'
+#     #gr: testing, but cannot have path AND branch
+#     #paths:
+#     #- '**.json'
+#     #tsdk: need this otherwise it will never make a package later on    
+#     tags:        
+#       - v*
+#   watch:
+#     types: [started]
 
-jobs:
-  Build:
-    name: ${{ matrix.config.os }}-${{ matrix.config.type }}
-    runs-on: ${{ matrix.config.os }}
-    strategy:
-      matrix:
-        config:
-          - os: ubuntu-latest
-            type: linux
-            architecture: x86_64
+# jobs:
+#   Build:
+#     name: ${{ matrix.config.os }}-${{ matrix.config.type }}
+#     runs-on: ${{ matrix.config.os }}
+#     strategy:
+#       matrix:
+#         config:
+#           - os: ubuntu-latest
+#             type: linux
+#             architecture: x86_64
 
-          - os: Nvidia
-            type: linux
-            architecture: arm64
+#           - os: Nvidia
+#             type: linux
+#             architecture: arm64
 
-          - os: Pi4
-            type: linux
-            architecture: arm64
+#           - os: Pi4
+#             type: linux
+#             architecture: arm64
 
-          - os: windows
-            type: windows
+#           - os: windows
+#             type: windows
 
-          - os: macOS
-            type: Ios
+#           - os: macOS
+#             type: Ios
 
-          - os: macOS
-            type: Osx
+#           - os: macOS
+#             type: Osx
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
+#     steps:
+#       - name: Checkout repo
+#         uses: actions/checkout@v2
+#         with:
+#           submodules: recursive
 
-      - name: Configure Node
-        uses: actions/setup-node@v1
-        with:
-          registry-url: https://npm.pkg.github.com/
-          scope: '@newchromantics'
-          node-version: 12
+#       - name: Configure Node
+#         uses: actions/setup-node@v1
+#         with:
+#           registry-url: https://npm.pkg.github.com/
+#           scope: '@newchromantics'
+#           node-version: 12
   
-      - name: Install Github Packages
-        working-directory: ${{ env.project }}.Package/
-        run: npm i
-        env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+#       - name: Install Github Packages
+#         working-directory: ${{ env.project }}.Package/
+#         run: npm i
+#         env:
+#           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
-      - name: Move Package Downloads to Libs
-        run: |
-          mkdir -p Libs
-          mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
-          ls -R Libs
+#       - name: Move Package Downloads to Libs
+#         run: |
+#           mkdir -p Libs
+#           mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
+#           ls -R Libs
 
-      - name: Configure Windows
-        if: matrix.config.os == 'windows'
-        uses: microsoft/setup-msbuild@v1.0.0
+#       - name: Configure Windows
+#         if: matrix.config.os == 'windows'
+#         uses: microsoft/setup-msbuild@v1.0.0
 
-      - name: Windows
-        if: matrix.config.os == 'windows'
-        uses: NewChromantics/PopAction_BuildWindows@v1
-        with:
-          BuildPlatform: x64
-          BuildConfiguration: Release
-          # would be nice to extract this from visual studio
-          BuildDirectory: Build\Release_x6
-          project: ${{ env.project }}
+#       - name: Windows
+#         if: matrix.config.os == 'windows'
+#         uses: NewChromantics/PopAction_BuildWindows@v1
+#         with:
+#           BuildPlatform: x64
+#           BuildConfiguration: Release
+#           # would be nice to extract this from visual studio
+#           BuildDirectory: Build\Release_x6
+#           project: ${{ env.project }}
 
-      - name: Apple
-        id: Apple
-        if: matrix.config.os == 'macOS'
-        uses: NewChromantics/PopAction_BuildApple@v1
-        with:
-          BuildScheme: ${{ env.project }}_${{ matrix.config.type }}
-          project: ${{ env.project }}
+#       - name: Apple
+#         id: Apple
+#         if: matrix.config.os == 'macOS'
+#         uses: NewChromantics/PopAction_BuildApple@v1
+#         with:
+#           BuildScheme: ${{ env.project }}_${{ matrix.config.type }}
+#           project: ${{ env.project }}
           
-      - name: Linux
-        if: matrix.config.type == 'linux'
-        uses: NewChromantics/PopAction_BuildLinux@v1
-        with:
-          machine: ${{ matrix.config.os }}
-          architecture: ${{ matrix.config.architecture }}
-          project: ${{ env.project }}
+#       - name: Linux
+#         if: matrix.config.type == 'linux'
+#         uses: NewChromantics/PopAction_BuildLinux@v1
+#         with:
+#           machine: ${{ matrix.config.os }}
+#           architecture: ${{ matrix.config.architecture }}
+#           project: ${{ env.project }}
 
-      - name: Upload Windows And Linux
-        uses: actions/upload-artifact@v2
-        if: matrix.config.os != 'macOS'
-        with:
-          name: ${{ matrix.config.os }}-${{ matrix.config.type }}
-          path: Build
+#       - name: Upload Windows And Linux
+#         uses: actions/upload-artifact@v2
+#         if: matrix.config.os != 'macOS'
+#         with:
+#           name: ${{ matrix.config.os }}-${{ matrix.config.type }}
+#           path: Build
 
-      - name: Upload MacOs
-# tsdk: v2 of this action fails with osx https://github.com/actions/upload-artifact/issues/76
-        uses: actions/upload-artifact@v1
-        if: matrix.config.os == 'macOS'
-        with:
-          name: ${{ matrix.config.os }}-${{ matrix.config.type }}
-          path: ${{ steps.Apple.outputs.buildDirectory }}
+#       - name: Upload MacOs
+# # tsdk: v2 of this action fails with osx https://github.com/actions/upload-artifact/issues/76
+#         uses: actions/upload-artifact@v1
+#         if: matrix.config.os == 'macOS'
+#         with:
+#           name: ${{ matrix.config.os }}-${{ matrix.config.type }}
+#           path: ${{ steps.Apple.outputs.buildDirectory }}
 
-  publish-gpr:
-    needs: Build
-    runs-on: ubuntu-latest
-    steps:
-      # Download artifacts into Packaging dir
-      - uses: actions/checkout@v2
-      - name: Download build artifacts
-        uses: actions/download-artifact@v2
-        with:
-          path: ${{ env.project }}.Package/
+#   publish-gpr:
+#     needs: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       # Download artifacts into Packaging dir
+#       - uses: actions/checkout@v2
+#       - name: Download build artifacts
+#         uses: actions/download-artifact@v2
+#         with:
+#           path: ${{ env.project }}.Package/
 
-      # copy files we want in the release/package into the package dir
-      - name: Copy files for packaging
-        run: |
-         echo Copying files into $PACKAGE_DIR
-         echo Project is ${{ env.project }}
-         echo Project2 is $project
-         cp Readme.md $PACKAGE_DIR
-        env:
-          PACKAGE_DIR: ${{ env.project }}.Package/
+#       # copy files we want in the release/package into the package dir
+#       - name: Copy files for packaging
+#         run: |
+#          echo Copying files into $PACKAGE_DIR
+#          echo Project is ${{ env.project }}
+#          echo Project2 is $project
+#          cp Readme.md $PACKAGE_DIR
+#         env:
+#           PACKAGE_DIR: ${{ env.project }}.Package/
 
-      # setup node for npm packaging
-      - name: Make github package
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
+#       # setup node for npm packaging
+#       - name: Make github package
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: 12
+#           registry-url: https://npm.pkg.github.com/
 
-      # set dry-run if this isn't a tag so npm publish will run, but not do anything (and not fail)
-      - name: Set npm publish as dry-run
-        if: startsWith(github.ref, 'refs/tags/v') != true
-        run: echo "::set-env name=NPM_PACKAGE_DRY_RUN::--dry-run"
+#       # set dry-run if this isn't a tag so npm publish will run, but not do anything (and not fail)
+#       - name: Set npm publish as dry-run
+#         if: startsWith(github.ref, 'refs/tags/v') != true
+#         run: echo "::set-env name=NPM_PACKAGE_DRY_RUN::--dry-run"
 
-      # copy files we want to
-      # download github-publish dependencies (ci), then publish from package dir
-      - name: Publish
-        working-directory: ${{ env.project }}.Package/
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: |
-          ls
-          npm ci
-          npm publish $NPM_PACKAGE_DRY_RUN
+#       # copy files we want to
+#       # download github-publish dependencies (ci), then publish from package dir
+#       - name: Publish
+#         working-directory: ${{ env.project }}.Package/
+#         env:
+#           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#         run: |
+#           ls
+#           npm ci
+#           npm publish $NPM_PACKAGE_DRY_RUN
 
-      # make a release
-      # needs to be after the npm package cause this step tars and deletes all the files in the dir which breaks it!       
-      - name: Make github release
-        # only try and make a release if this is a release (to help testing npm packaging)
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: fnkr/github-action-ghr@v1   
-        env:
-         GHR_COMPRESS: xz
-         GHR_PATH: ${{ env.project }}.Package/
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       # make a release
+#       # needs to be after the npm package cause this step tars and deletes all the files in the dir which breaks it!       
+#       - name: Make github release
+#         # only try and make a release if this is a release (to help testing npm packaging)
+#         if: startsWith(github.ref, 'refs/tags/v')
+#         uses: fnkr/github-action-ghr@v1   
+#         env:
+#          GHR_COMPRESS: xz
+#          GHR_PATH: ${{ env.project }}.Package/
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
