better naming for target os

--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -58,6 +58,6 @@ jobs:
         uses: NewChromantics/PopAction_BuildLinux@v1
         with:
           lib_dir: ${{ matrix.config.os }}-${{ matrix.config.type }}
-          architecture: ${{ matrix.config.os }}
+          os: ${{ matrix.config.os }}
           project: ${{ env.project }}
 
