--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,18 +16,17 @@ jobs:
     strategy:
       matrix:
         config:
-          # tsdk: Disabled as the kinect dependencies break the build
-          - os: ubuntu-latest
-            type: linux
-            architecture: x86_64
+          # - os: ubuntu-latest
+          #   type: linux
+          #   architecture: x86_64
 
           # - os: Nvidia
           #   type: linux
           #   architecture: arm64
 
-          # - os: Pi4
-          #   type: linux
-          #   architecture: arm64
+          - os: Pi4
+            type: linux
+            architecture: arm64
 
     steps:
       - uses: actions/checkout@v2
