--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -97,8 +97,8 @@
 #         if: matrix.config.type == 'linux'
 #         uses: NewChromantics/PopAction_BuildLinux@v1
 #         with:
-#           machine: ${{ matrix.config.os }}
-#           architecture: ${{ matrix.config.architecture }}
+#           lib_dir: ${{ matrix.config.os }}-${{ matrix.config.type }}
+#           os: ${{ matrix.config.os }}
 #           project: ${{ env.project }}
 
 #       - name: Upload Windows And Linux
