--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          submodules: "true"
+          submodules: "recursive"
 
       - name: Configure Node
         uses: actions/setup-node@v1
