--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,13 +16,13 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-latest
-            type: linux
-            architecture: x86_64
-
-          # - os: Nvidia
+          # - os: ubuntu-latest
           #   type: linux
-          #   architecture: arm64
+          #   architecture: x86_64
+
+          - os: Nvidia
+            type: linux
+            architecture: arm64
 
           # - os: Pi4
           #   type: linux
