reenable all platform workflows

--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         config:
+          # tsdk: Need PopCameraDevice Libs built first
           # - os: ubuntu-latest
           #   type: linux
           #   architecture: x86_64
