--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -1,51 +1,51 @@
-# name: Build Windows
+name: Build Windows
 
-# env:
-#   project: PopEngine
-#   AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
+env:
+  project: PopEngine
+  AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
 
-# on:
-#   push:
-#     branches:
-#       - master
-#       - '*Test*'
+on:
+  push:
+    branches:
+      - master
+      - '*Test*'
 
-# jobs:
-#   Build:
-#     runs-on: [self-hosted, windows]
+jobs:
+  Build:
+    runs-on: [self-hosted, windows]
 
-#     steps:
-#       - uses: actions/checkout@v2
-#         with:
-#           submodules: 'recursive'
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
 
-#       - name: Configure Node
-#         uses: actions/setup-node@v1
-#         with:
-#           registry-url: https://npm.pkg.github.com/
-#           scope: '@newchromantics'
-#           node-version: 12
+      - name: Configure Node
+        uses: actions/setup-node@v1
+        with:
+          registry-url: https://npm.pkg.github.com/
+          scope: '@newchromantics'
+          node-version: 12
   
-#       - name: Install Github Packages
-#         working-directory: ${{ env.project }}.Package/
-#         run: npm i
-#         env:
-#           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+      - name: Install Github Packages
+        working-directory: ${{ env.project }}.Package/
+        run: npm i
+        env:
+          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
-#       - name: Move Package Downloads to Libs
-#         run: |
-#           mkdir -p Libs
-#           mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
-#           ls -R Libs
+      - name: Move Package Downloads to Libs
+        run: |
+          mkdir -p Libs
+          mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
+          ls -R Libs
 
-#       - name: Add msbuild to PATH
-#         uses: microsoft/setup-msbuild@v1.0.0
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.0
 
-#       - name: Windows
-#         uses: NewChromantics/PopAction_BuildWindows@v1
-#         with:
-#           BuildPlatform: x64
-#           BuildConfiguration: Release
-#           # would be nice to extract this from visual studio
-#           BuildDirectory: Build\Release_x6
-#           project: ${{ env.project }}
+      - name: Windows
+        uses: NewChromantics/PopAction_BuildWindows@v1
+        with:
+          BuildPlatform: x64
+          BuildConfiguration: Release
+          # would be nice to extract this from visual studio
+          BuildDirectory: Build\Release_x6
+          project: ${{ env.project }}
