--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -113,7 +113,7 @@ jobs:
         uses: actions/upload-artifact@v1
         if: matrix.config.os == 'macOS'
         with:
-          name: ${{ matrix.config.os }}-${{ matrix.config.type }}
+          name: ${{ env.project }}_${{ matrix.config.type }}.framework
           path: ${{ steps.Apple.outputs.buildDirectory }}
 
   publish-gpr:
