--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -3,6 +3,7 @@ name: Create Release
 env:
   project: PopEngine
   AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
+  WRITE_TOKEN: b0eab4c5c98cd45f3eb387f9a281955567344238
 
 on:
   push:
@@ -155,7 +156,7 @@ jobs:
       - name: Publish
         working-directory: ${{ env.project }}.Package/
         env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ env.WRITE_TOKEN }}
         run: |
           ls
           npm i
