upload vars set in action

--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   Build:
-    name: ${{ matrix.config.os }}-${{ matrix.config.type }}
+    name: ${{ matrix.config.os }}
     runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
@@ -97,24 +97,16 @@ jobs:
         if: matrix.config.type == 'linux'
         uses: NewChromantics/PopAction_BuildLinux@v1
         with:
-          lib_dir: ${{ matrix.config.os }}-${{ matrix.config.type }}
+          lib_dir: ${{ matrix.config.os }}
           os: ${{ matrix.config.os }}
           project: ${{ env.project }}
 
-      - name: Upload Windows And Linux
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
-        if: matrix.config.os != 'macOS'
         with:
-          name: ${{ matrix.config.os }}-${{ matrix.config.type }}
-          path: Build
-
-      - name: Upload MacOs
-# tsdk: v2 of this action fails with osx https://github.com/actions/upload-artifact/issues/76
-        uses: actions/upload-artifact@v1
-        if: matrix.config.os == 'macOS'
-        with:
-          name: ${{ env.project }}_${{ matrix.config.type }}.framework
-          path: ${{ steps.Apple.outputs.buildDirectory }}
+          # tsdk: these env vars are set in each of the actions
+          name: ${{ env.UPLOAD_NAME }}
+          path: ${{ env.UPLOAD_DIR }}
 
   publish-gpr:
     needs: Build
