--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,10 +16,9 @@ jobs:
     strategy:
       matrix:
         config:
-          # tsdk: Need PopCameraDevice Libs built first
-          # - os: ubuntu-latest
-          #   type: linux
-          #   architecture: x86_64
+          - os: ubuntu-latest
+            type: linux
+            architecture: x86_64
 
           - os: Nvidia
             type: linux
@@ -57,7 +56,7 @@ jobs:
       - name: Linux
         uses: NewChromantics/PopAction_BuildLinux@v1
         with:
-          lib_dir: ${{ matrix.config.os }}-${{ matrix.config.type }}
+          lib_dir: ${{ matrix.config.os }}
           os: ${{ matrix.config.os }}
           project: ${{ env.project }}
 
