enable linux x86_64 release

--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -25,9 +25,9 @@ jobs:
     strategy:
       matrix:
         config:
-          # - os: ubuntu-latest
-          #   type: linux
-          #   architecture: x86_64
+          - os: ubuntu-latest
+            type: linux
+            architecture: x86_64
 
           - os: Nvidia
             type: linux
