--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -1,15 +1,12 @@
 name: Build Apple
-
 env:
   project: PopEngine
   AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
-
 on:
   push:
     branches:
       - master
       - '*Test*'
-
 jobs:
   Test:
     name: ${{ matrix.config.os }}-${{ matrix.config.type }}
@@ -19,35 +16,31 @@ jobs:
         config:
           - os: macOS
             type: Ios
-
+            BuildScheme:  PopEngine_Ios
           - os: macOS
             type: Osx
-
+            BuildScheme: PopEngine_App 
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
-      
       - name: Configure Node
         uses: actions/setup-node@v1
         with:
           registry-url: https://npm.pkg.github.com/
           scope: '@newchromantics'
           node-version: 12
-  
       - name: Install Github Packages
         working-directory: ${{ env.project }}.Package/
         run: npm i
         env:
           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
-
       - name: Move Package Downloads to Libs
         run: |
           mkdir -p Libs
           mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
           ls -R Libs
-
       - uses: NewChromantics/PopAction_BuildApple@v1
         with:
-          BuildScheme: ${{ env.project }}_${{ matrix.config.type }}
+          BuildScheme: ${{ matrix.config.BuildScheme }}
           project: ${{ env.project }}
