update to secret

--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -27,10 +27,9 @@ jobs:
           node-version: 12
   
       - name: Install Github Packages
-        working-directory: ${{ env.project }}.Package/
         run: npm i
         env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
 
       - name: Move Package Downloads to Libs
         run: |
