--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -19,22 +19,25 @@ jobs:
             BuildScheme:  PopEngine_Ios
           - os: macOS
             type: Osx
-            BuildScheme: PopEngine_App 
+            BuildScheme: PopEngine_App
+
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
+
       - name: Configure Node
         uses: actions/setup-node@v1
         with:
           registry-url: https://npm.pkg.github.com/
           scope: '@newchromantics'
           node-version: 12
+
       - name: Install Github Packages
-        working-directory: ${{ env.project }}.Package/
         run: npm i
         env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
+
       - name: Move Package Downloads to Libs
         run: |
           mkdir -p Libs
