--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -39,12 +39,11 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@newchromantics'
           node-version: 12
-
+  
       - name: Install Github Packages
-        working-directory: ${{ env.project }}.Package/
         run: npm i
         env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
 
       - name: Move Package Downloads to Libs
         run: |
