Android building other abis

--- a/.gitignore
+++ b/.gitignore
@@ -61,10 +61,13 @@ PopEngine.visualstudio/bin/
 
 # android build files
 *.Android/obj/
+*.Android/libs/
 
 # ignore package-downloaded-files
+# gr: note this is ignoring src/Libs too
 Libs
 .npmrc
 node_modules
 *.Package/package-lock.json
+
 
