hardcoded Thomas API key

--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -2,7 +2,7 @@ name: Build Windows
 
 env:
   project: PopEngine
-  AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
+  AUTH_TOKEN: da16e44ac000368c4a7bca1e98dcd6660834a33b
 
 on:
   push:
