--- a/PopEngine.visualstudio/packages.config
+++ b/PopEngine.visualstudio/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.6.0" targetFramework="native" />
   <package id="Microsoft.AI.Skills.Vision.SkeletalDetectorPreview" version="0.1.0.4" targetFramework="native" />
+  <package id="OpenXR.Headers" version="1.0.10.2" targetFramework="native" />
+  <package id="OpenXR.Loader" version="1.0.10.2" targetFramework="native" />
 </packages>
