changed auth token to secret

--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -1,7 +1,8 @@
 name: Build Apple
 env:
   project: PopEngine
-  AUTH_TOKEN: db13663e713fb0ed4dc2041ea44904ae1b41d978
+  AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
+
 on:
   push:
     branches:
@@ -37,7 +38,7 @@ jobs:
         working-directory: ${{ env.project }}.Package/
         run: npm i
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_KEY_ACTIONS }}
+          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
       - name: Move Package Downloads to Libs
         run: |
